<resources>
    <string name="app_name">mobile</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="label_write">Написать</string>

    <string name="label_comment">Сообщение</string>

    <string name="label_categories">Категории</string>
    <string name="label_category_relax">Отдых и туризм</string>
    <string name="label_category_business">Бизнес</string>
    <string name="label_category_culture">Культура</string>
    <string name="label_category_science">Наука</string>
    <string name="label_category_news">Новости</string>
    <string name="label_category_architecture">Архитектура</string>
    <string name="label_category_cars">Авто</string>

</resources>

