<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/daynight_backColor"
        tools:context="ru.rym.mobile.activities.CategoryActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:scaleType="fitXY">
        <TextView
                android:text="@string/label_categories"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@color/daynight_backColor"
                android:id="@+id/textView"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/daynight_textColor"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"/>
        <!--ru.rambler.libs.swipe_layout.SwipeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_margin="30dp"-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">
        <LinearLayout
                android:id="@+id/category_relax_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/daynight_backColor"
                android:clickable="true"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

            <ImageView
                    android:id="@+id/category_relax_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:background="@drawable/button_round_while"
                    android:src="@drawable/baseline_luggage_black_48" />
            <TextView
                    android:id="@+id/category_relax_tv"
                    android:text="@string/label_category_relax"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/daynight_textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/category_business_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/daynight_backColor"
                android:clickable="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal" >

            <ImageView
                    android:id="@+id/category_business_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:background="@drawable/button_round_while"
                    android:src="@drawable/baseline_handshake_black_48" />
            <TextView
                    android:id="@+id/category_business_tv"
                    android:text="@string/label_category_business"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/daynight_textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/category_culture_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/daynight_backColor"
                android:clickable="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal" >

            <ImageView
                    android:id="@+id/category_culture_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:background="@drawable/button_round_while"
                    android:src="@drawable/baseline_account_balance_black_48" />
            <TextView
                    android:id="@+id/category_culture_tv"
                    android:text="@string/label_category_culture"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/daynight_textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/category_science_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/daynight_backColor"
                android:clickable="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal" >

            <ImageView
                    android:id="@+id/category_science_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:background="@drawable/button_round_while"
                    android:src="@drawable/baseline_all_inclusive_black_48" />
            <TextView
                    android:id="@+id/category_science_tv"
                    android:text="@string/label_category_science"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/daynight_textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/category_news_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/daynight_backColor"
                android:clickable="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal" >

            <ImageView
                    android:id="@+id/category_news_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:background="@drawable/button_round_while"
                    android:src="@drawable/baseline_newspaper_black_48" />
            <TextView
                    android:id="@+id/category_news_tv"
                    android:text="@string/label_category_news"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/daynight_textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/category_architecture_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/daynight_backColor"
                android:clickable="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal" >

            <ImageView
                    android:id="@+id/category_architecture_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:background="@drawable/button_round_while"
                    android:src="@drawable/baseline_foundation_black_48" />
            <TextView
                    android:id="@+id/category_architecture_tv"
                    android:text="@string/label_category_architecture"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/daynight_textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/category_cars_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/daynight_backColor"
                android:clickable="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal" >

            <ImageView
                    android:id="@+id/category_cars_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:background="@drawable/button_round_while"
                    android:src="@drawable/baseline_directions_car_black_48" />
            <TextView
                    android:id="@+id/category_cars_tv"
                    android:text="@string/label_category_cars"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/daynight_textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"/>
        </LinearLayout>
        <!--/ru.rambler.libs.swipe_layout.SwipeLayout-->
       </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
